--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask
-gunicorn
-scikit-learn
-pandas
-pickle-mixin
+Flask==2.1.1
+gunicorn==20.1.0
+scikit-learn==1.0.2
+pandas==1.3.3
+pickle-mixin==1.0.2
